bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:5: error: ')' expected but 'else' found.
   else {
   ^